# minisql

minisql/: dune-project
minisql/_build/: .db  .digest-db  trace.csexp  trace.csexp.old
minisql/_build/.promotion-staging/: minisql.opam
minisql/_build/default/: META.minisql  minisql.dune-package  minisql.install
minisql/_build/default/.dune/: configurator  configurator.v2
minisql/_build/default/lib/: ast.ml  engine.ml  lexer.ml  minisql.cma  minisql.cmxa  minisql.cmxs  minisql.ml-gen  parser.ml  storage.ml
minisql/_build/default/lib/.merlin-conf/: lib-minisql
minisql/_build/default/lib/.minisql.objs/: minisql__Ast.impl.all-deps  minisql__Ast.impl.d  minisql__Engine.impl.all-deps  minisql__Engine.impl.d  minisql__Eval.impl.all-deps  minisql__Eval.impl.d  minisql__Lexer.impl.d  minisql__Parser.impl.all-deps  minisql__Parser.impl.d  minisql__Storage.impl.d  minisql__Types.impl.d
minisql/_build/default/lib/.minisql.objs/byte/: minisql.cmi  minisql.cmo  minisql.cmt  minisql__Ast.cmi  minisql__Ast.cmo  minisql__Ast.cmt  minisql__Engine.cmi  minisql__Engine.cmo  minisql__Engine.cmt  minisql__Eval.cmi  minisql__Eval.cmo  minisql__Eval.cmt  minisql__Lexer.cmi  minisql__Lexer.cmo  minisql__Lexer.cmt  minisql__Parser.cmi  minisql__Parser.cmo  minisql__Parser.cmt  minisql__Storage.cmi  minisql__Storage.cmo  minisql__Storage.cmt  minisql__Types.cmi  minisql__Types.cmo  (+1 more)
minisql/_build/default/test/: test_minisql.ml
minisql/_build/default/test/.merlin-conf/: exe-test_minisql
minisql/lib/: ast.ml  dune  eval.ml  parser.ml  storage.ml  types.ml
minisql/test/: dune
(+45 files in other folders)
